erDiagram
    COMPANY {
        int id PK
        string name
        string description
    }
    EMPLOYEE {
        int id PK
        int companyId FK
        string name
        string email
        string role
        boolean isActive
    }
    POSITION {
        int id PK
        int companyId FK
        int interviewFlowId FK
        string title
        string description
        string status
        boolean isVisible
        string location
        string jobDescription
        string requirements
        string responsibilities
        float salaryMin
        float salaryMax
        string employmentType
        string benefits
        datetime applicationDeadline
        string contactInfo
    }
    INTERVIEW_FLOW {
        int id PK
        string description
    }
    INTERVIEW_STEP {
        int id PK
        int interviewFlowId FK
        int interviewTypeId FK
        string name
        int orderIndex
    }
    INTERVIEW_TYPE {
        int id PK
        string name
        string description
    }
    CANDIDATE {
        int id PK
        string firstName
        string lastName
        string email
        string phone
        string address
    }
    APPLICATION {
        int id PK
        int positionId FK
        int candidateId FK
        datetime applicationDate
        string status
        string notes
    }
    INTERVIEW {
        int id PK
        int applicationId FK
        int interviewStepId FK
        int employeeId FK
        datetime interviewDate
        string result
        int score
        string notes
    }
    EDUCATION {
        int id PK
        int candidateId FK
        string degree
        string institution
        datetime startDate
        datetime endDate
    }
    WORK_EXPERIENCE {
        int id PK
        int candidateId FK
        string company
        string position
        datetime startDate
        datetime endDate
    }
    RESUME {
        int id PK
        int candidateId FK
        string filePath
        string fileType
        datetime uploadDate
    }

    COMPANY ||--o{ EMPLOYEE : employs
    COMPANY ||--o{ POSITION : offers
    POSITION ||--|| INTERVIEW_FLOW : assigns
    INTERVIEW_FLOW ||--o{ INTERVIEW_STEP : contains
    INTERVIEW_STEP ||--|| INTERVIEW_TYPE : uses
    POSITION ||--o{ APPLICATION : receives
    CANDIDATE ||--o{ APPLICATION : submits
    APPLICATION ||--o{ INTERVIEW : has
    INTERVIEW ||--|| INTERVIEW_STEP : consists_of
    EMPLOYEE ||--o{ INTERVIEW : conducts
    CANDIDATE ||--o{ EDUCATION : has
    CANDIDATE ||--o{ WORK_EXPERIENCE : has
    CANDIDATE ||--o{ RESUME : uploads